--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Item Quantity</label>
-                        <input type="number" class="form-control" id="item-Quantity">
+                        <input type="text" class="form-control" id="item-Quantity">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Item Price</label>
-                        <input type="number" class="form-control" id="item-Price">
+                        <input type="text" class="form-control" id="item-Price">
                     </div>
-                    <button type="button" class="btn-btn-primary">Add Item</button>
+                    <button type="button" class="btn-btn-primary" onclick="addItems()">Add Item</button>
     
                 </form>
 
@@ -51,7 +51,7 @@
                     <thead class="table">
                         <tr>
                             <th scope="col">Item Name</th>
-                            <th scope="col">Item  Quantity</th>
+                            <th scope="col">Item Quantity</th>
                             <th scope="col">Item Price</th>
 
                         </tr>
